[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "openmv-genx320-recorder"
version = "0.1.0"
description = "Plug-and-play raw event recorder for OpenMV RT1062 + Prophesee GenX320 cameras"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "openmv-genx320-recorder contributors" }]
keywords = ["event-camera", "neuromorphic", "openmv", "genx320", "prophesee", "dvs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = [
    "numpy>=1.20",
    "pyserial>=3.5",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.5"]
dev = ["matplotlib>=3.5"]

[project.scripts]
genx320 = "openmv_genx320_recorder.__main__:main"

[project.urls]
Homepage = "https://github.com/yourname/openmv-genx320-recorder"

[tool.setuptools.packages.find]
where = ["."]
include = ["openmv_genx320_recorder*"]
